test/error/struct-field-default-type-mismatch.dsk
let S = struct
    x: int = "hello"
let s = S()
